tests/define-units-relationship/fail_1_mul_1_mul_1.stderr
error: no rules expected `*`
  --> tests/define-units-relationship/fail_1_mul_1_mul_1.rs:23:14
   |
23 |         U1 1 * U2 1 * U3 1,
   |              ^ no rules expected this token in macro call
   |
note: while trying to match `==`
  --> src/define_measure_types.rs
   |
   |                 $unit1:ident $dim1:tt == $unit2:ident $dim2:tt $op:tt $unit3:ident $dim3:tt $(,)?
   |                                       ^^
